# evolution-mail-translate

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  DEVELOPER_GUIDE.md  LICENSE  README.md  RELEASING.md  SECURITY.md  USER_GUIDE.md  requirements.txt
.github/workflows/: ci.yml  codeql.yml  install-e2e.yml  release.yml
data/: CMakeLists.txt
data/gschema/: org.gnome.evolution.translate.gschema.xml
debian/: changelog  control  copyright  install  postinst  postrm  prerm  rules
docs/: ARCHITECTURE.md  ARCHITECTURE.txt  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CODEBASE_NAVIGATION.md  CODE_REFERENCE.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  TRANSLATION_FLOW.md  USER_GUIDE.md
docs/man/: evolution-translate-setup.1
scripts/: build-deb.sh  clean.sh  evolution-translate-setup.sh  install-from-source.sh  prepare-release.sh  uninstall.sh
src/: CMakeLists.txt  m-utils.c  m-utils.h  translate-browser-extension.c  translate-browser-extension.h  translate-common.c  translate-common.h  translate-content.c  translate-content.h  translate-dom.c  translate-dom.h  translate-mail-ui.c  translate-mail-ui.h  translate-module.c  translate-preferences.c  translate-preferences.h  translate-shell-view-extension.c  translate-shell-view-extension.h  translate-utils.c  translate-utils.h
src/providers/: translate-provider-argos.c  translate-provider-argos.h  translate-provider-google.c  translate-provider-google.h  translate-provider-libre.c  translate-provider-libre.h  translate-provider-mymemory.c  translate-provider-mymemory.h  translate-provider.c  translate-provider.h
tests/python/: test_translate_runner.py
tools/translate/: gpu_utils.py  install_default_models.py  setup_models.py  translate_runner.py  translate_runner_online.py
